# Cloud-storageSimulator

./: .gitignore  DEPLOYMENT.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  render.yaml  tailwind.config.ts  vercel.json  vite.config.ts
backend/: CMakeLists.txt  DEPLOYMENT_RENDER.md  Dockerfile  build-wsl.sh  build.sh  cloud.h  cloud_integration.cpp  cloud_rw.cpp  cloud_server  cloud_simulator.cpp  cloud_storage.cpp  deadlock_detector.cpp  deadlock_detector.cpp.backup  deadlock_detector.h  file_system.cpp  file_system.h  fly.toml  httplib.h  ipc_manager.cpp  ipc_manager.h  main.cpp  os_concepts.h  os_demo_ui.cpp  process_scheduler.cpp  process_scheduler.h  readme.md  unified_os.h  unified_simulator.cpp
src/: App.tsx  index.css
src/components/: CloudHeader.tsx  CloudStats.tsx  ConnectionStatus.tsx  DeadlockGraphs.tsx  FileOperations.tsx  LogViewer.tsx  Navigation.tsx  PerformanceMetrics.tsx  ThreadManager.tsx
src/components/ui/: avatar.tsx  button.tsx
src/hooks/: useBackendCloud.ts  useCloudStorage.ts
src/pages/: Dashboard.tsx  Files.tsx  Index.tsx  Monitoring.tsx  OSSimulator.tsx  Performance.tsx
src/services/: cloudApi.ts
